--- a/style.css
+++ b/style.css
@@ -4,18 +4,26 @@ body {
     font-style: normal;
     background-color: black;
     color: white;
+    padding: 0;
+    margin: 10px 0 0 0;
 }
 
 .error div {
-    margin: auto auto;
+    margin: 0 auto;
     width: 250px;
     text-align: center;
     display: none;
 }
 
 .main_table {
-    margin: auto 20px;
     max-width: 820px;
+    min-width: 2%;
+    margin: 0 auto;
+}
+
+.table {
+    margin: 0 40px;
+    box-sizing: border-box;
 }
 
 .main_table table {
@@ -23,7 +31,12 @@ body {
     border-collapse: collapse;
 }
 
-.main_table * {
+.main_table tbody tr td {
+    border: 1px solid white;
+    word-wrap: break-word;
+}
+
+.main_table th {
     border: 1px solid white;
     word-wrap: break-word;
 }
@@ -32,10 +45,15 @@ body {
     border: none;
 }
 
-.is_eval {
-    position: fixed;
-    right: 10px;
+.is_even {
+    position: relative;
     width: 20px;
+    float: right;
+    margin-right: -30px;
+}
+
+.is_even div {
+    position: fixed;
     bottom: 90px;
 }
 
@@ -75,4 +93,14 @@ body {
     color: tomato;
     height: 1px;
     text-align: right;
+}
+
+.time_detector {
+    width: inherit;
+    height: 1px;
+    background-color: greenyellow;
+    opacity: 0.5;
+    position: absolute;
+    border: 0;
+    margin-top: 0px;
 }
